# orthoai-agent

./: .env  .gitignore  DEPLOY_TO_AGENTBEATS.md  Procfile  Procfile.white  QUICK_DEPLOY.md  QUICK_START.md  README.md  TESTING.md  TROUBLESHOOTING.md  api_server.py  index.html  instructions.md  main.py  package-lock.json  package.json  pyproject.toml  quick_start.sh  requirements.txt  run.sh  test_agent_setup.py  test_cloudflare.py  test_controller_setup.py  test_white_agent_setup.py  update_port.sh
.ab/agents/2153ce5d90034085bc0635b13defa727/: agent_card
.ab/agents/5f6e362f2b7c4e39937f067fefa14793/: agent_card
.ab/agents/a5eca4c407ca449b96d464a0ca2cfbb7/: agent_card
.ab/agents/cbd68304c26d4d8e93ab794b9f35994f/: agent_card
agentify-example-tau-bench-main/: README.md  instructions.md  main.py  restart_with_tunnel.sh  run.sh  test_clouderun_host.py  test_cloudflare.py  test_status_endpoint.py  test_tunnel.py  verify_agent_card.py
agentify-example-tau-bench-main/.ab/agents/e0ded4fd3e8f42d497295a5d95269f9a/: agent_card
agentify-example-tau-bench-main/.cloudflared/: config.yml
agentify-example-tau-bench-main/src/green_agent/: agent.py
agentify-example-tau-bench-main/src/white_agent/: agent.py
green-agent/: system_prompt.txt
src/: App.css  App.jsx  __init__.py  index.css  launcher.py
src/green_agent/: __init__.py  agent.py  medical_green_agent.toml
src/my_util/: __init__.py
src/white_agent/: __init__.py  agent.py
